deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boom-app-backend 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boom-app-backend
      tier: backend
  template:
    metadata:
      labels:
        app: boom-app-backend
        tier: backend  # Add tier label for the backend
    spec:
      containers:
      - name: lendsqr-backend
        image: ghcr.io/shawen17/boom-app-job-lendsqr_backend:122
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boom-app-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boom-app-frontend
      tier: frontend
  template:
    metadata:
      labels:
        app: boom-app-frontend
        tier: frontend  
    spec:
      containers:
      - name: lendsqr-frontend
        image: ghcr.io/shawen17/boom-app-job-lendsqr:122
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-secret
