service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boom-app-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: boom-app-frontend
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  # Frontend container port
---
apiVersion: v1
kind: Service
metadata:
  name: boom-app-backend-service
spec:
  type: LoadBalancer
  selector:
    app: boom-app-backend
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  # Backend container port
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    app: redis
    tier: cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
